@@ -1,3 +1,3 @@
 #! /bin/sh
 
-ANT_OPTS="-Xss8m -Xmx1024m -server -XX:+UseParallelGC -XX:MaxPermSize=256m" ant -lib strategoxt-base.jar
+ANT_OPTS="-Xss8m -Xmx1024m" ant -lib strategoxt-base.jar install
